--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <style>
     :root {
       --primary-color: #1e6751;
@@ -267,7 +268,7 @@
 <body>
   <div class="header-bar">
     <div class="container">
-      <h1><i class="fas fa-table-tennis-paddle-ball logo-icon"></i> Tennis Court Reservation System</h1>
+      <h1><i class="fas fa-table-tennis-paddle-ball logo-icon"></i> Tennis Court Reservation System XXX</h1>
     </div>
   </div>
 
@@ -467,7 +468,6 @@
     </div>
   </footer>
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const API_URL = 'http://localhost:5000/api';
     let token = localStorage.getItem('token');
